# associative-scan-triton

./: .gitignore  README.md  pyproject.toml
bench/: bench_accuracy.py  bench_kernels.py  bench_vs_warpscan.py  plot_readme.py
docs/: triton_vs_cuda_scan.md
src/associative_scan_triton/: __init__.py  _dispatcher.py  _grid.py  _kernels.py  _shift_pad.py  scan_compiled.py  scan_eager.py
tests/: conftest.py  jax_utils.py  test_compiled.py  test_scan_bidi.py  test_scan_causal.py  test_scan_dtypes.py  test_scan_kernels.py  test_shift_pad.py  test_utils.py
