[project]
name = "associative-scan-triton"
version = "0.1.0"
description = "Chunked associative scan (first-order linear recurrence) in Triton with varlen/packing, bidirectional, and torch.compile support"
readme = "README.md"
authors = [
    { name = "FilipV", email = "34603115+PheelaV@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.10.0",
    "triton>=3.6.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
bench = [
    "accelerated-scan>=0.3.1",
]
dev = [
    "jax>=0.6.2",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
